1.4.2.0 update
1.4.2.0

bugfixes
fixed potentially spawning inside solid blocks on first visit to False Overworld
salmon spawning in Ancient forest biome not limiting the spawn amount

added
Blightwood
Shadeblight biome - in strange forests
End Soil
End grass

changed
Ore drops handling
tweaked sculk caverns spawn rate
changed end caves generation

added
textures for future update